# time-series-lab

./: .gitignore  README.md  pyproject.toml  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_preparation.yml
docs/source/: conf.py  index.rst
notebooks/: debug_libraries.py  lab_autoformer_00.ipynb  lab_autoformer_01.ipynb  output_debug.ipynb
src/tests/pipelines/data_preparation/: test_pipeline.py
src/time_series_lab/: __init__.py  __main__.py  pipeline_registry.py
src/time_series_lab/pipelines/data_preparation/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
